@@ -2,10 +2,13 @@ AUTOMAKE_OPTIONS = dist-bzip2
 
 SUBDIRS	= bin pitivi common
 
+desktopdir = $(datadir)/applications
+desktop_DATA = pitivi.desktop
+
+
 EXTRA_DIST = \
 	pitivi.spec \
 	pitivi.spec.in \
-	pitivi.desktop \
 	ChangeLog \
 	autogen.sh \
 	NEWS \
