@@ -1,11 +1,11 @@
 [Desktop Entry]
 Encoding=UTF-8
-Name=pitivi
+Name=Pitivi
 Comment=Non-linear video editor
 Comment[fr]=Editeur Vidéo Non-Linéaire
 Exec=pitivi
 Terminal=false
 Type=Application
 Icon=pitivi/pitivi-48.png
-Categories=GNOME;Application;AudioVideo;
-StartupNotify=false
+Categories=GNOME;GTK;Application;AudioVideo;X-Ximian-Main;X-Red-Hat-Base;
+StartupNotify=true
